--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,12 @@
   <artifactId>AutomationFramework.QCO-SOEAJD-E12</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  
    
+<properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   
   
 <dependencies>
@@ -51,7 +56,7 @@
 <profiles>
 	
 <profile>
-<id>Smoke</id>
+<id>smoke</id>
 <build>
 <plugins>
       <plugin>
@@ -69,7 +74,7 @@
 </profile>
 
 <profile>
-<id>Regression</id>
+<id>regression</id>
 <build>
 <plugins>
       <plugin>
